--- a/my-project/package.json
+++ b/my-project/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "mpvue": "^2.0.0",
+    "vconsole": "^3.3.0",
+    "vue-template-compiler": "^2.0.0",
     "vuex": "^3.0.1",
     "wafer2-client-sdk": "^2.1.0"
   },
