--- a/my-project/package.json
+++ b/my-project/package.json
@@ -31,6 +31,7 @@
     "wafer2-client-sdk": "^2.1.0"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.1",
