完成图书详情页面

--- a/wx-book/src/app.json
+++ b/wx-book/src/app.json
@@ -5,6 +5,11 @@
     "pages/me/main",
     "pages/detail/main"
   ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#e4393c",
