--- a/wx-book/project.config.json
+++ b/wx-book/project.config.json
@@ -34,12 +34,20 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "login",
 					"pathName": "pages/me/main",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "detail",
+					"pathName": "pages/detail/main",
+					"query": "id=34",
 					"scene": null
 				}
 			]
